--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
     "consign": "^0.1.2",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "sequelize": "^5.21.5",
+    "sqlite3": "^4.1.1"
   }
 }
