--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
+    "bcrypt": "^4.0.0",
     "consign": "^0.1.2",
     "express": "^4.13.4",
     "sequelize": "^5.21.5",
