--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
     "bcrypt": "^4.0.0",
+    "body-parser": "^1.19.0",
     "consign": "^0.1.2",
     "express": "^4.13.4",
     "sequelize": "^5.21.5",
